# budget

./: .gitignore  Cargo.toml  GEMINI.md  README.md  WorkSoFar.md  architecture_guide.md  architecture_guide_example.rs  bacon.toml
app/: Cargo.toml
app/public/: index.html
app/public/css/: autocomplete.css
app/public/js/: autocomplete.js  budget.js  charts.js  editing.js
app/src/: main.rs
app/src/handlers/: auth.rs
app/templates/: login.html
crates/cards/: Cargo.toml
crates/cards/src/: handler.rs  lib.rs  models.rs  repository.rs  service.rs
crates/categories/: Cargo.toml
crates/categories/src/: budget_repository.rs  handler.rs  lib.rs  models.rs  repository.rs  service.rs  virtual_budget.rs
crates/categories/templates/: manage_categories.html
crates/common/: Cargo.toml
crates/common/src/: auth.rs  lib.rs
crates/database/: Cargo.toml
crates/database/migrations/: 0001_initial_schema.sql
crates/database/src/: lib.rs
crates/transactions/: Cargo.toml
crates/transactions/src/: handler.rs  lib.rs  models.rs  repository.rs  service.rs
crates/transactions/templates/: month_view.html  row_snippet.html
