[workspace]
members = [
    "app",
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "sqlite" ] }
askama = { version = "0.15" }
serde_json = "1.0"
thiserror = "2.0"
validator = { version = "0.19", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
rust-embed = "8.0"
axum-embed = "0.1"
tower-http = { version = "0.6", features = ["trace", "fs"] }
tower-sessions = "0.15"
dotenvy = "0.15"

# Internal crate dependencies
database = { path = "crates/database" }
common = { path = "crates/common" }
transactions = { path = "crates/transactions" }
categories = { path = "crates/categories" }
