[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { workspace = true }
common = { workspace = true }
transactions = { workspace = true }
categories = { workspace = true }
cards = { path = "../crates/cards" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
rust-embed = { workspace = true }
axum-embed = { workspace = true }
tower-sessions = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
